# demoProject

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: demotest.yml
DemoApp/: CMakeLists.txt  DemoApp.cpp  DemoApp.vcxproj  DemoApp.vcxproj.filters  calculator.cpp
demoTest1/: CMakeLists.txt  demoProject.sln  demoTest1.vcxproj  test.cpp
src/: CMakeLists.txt  calculator.h
tst/: CMakeLists.txt  test.cpp
